--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Create a rotating globe</title>
+    <title>Map It!</title>
     <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-
+    <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div id="map" class="map"></div>
     <header class="header">
-      <h1>Test your knowledge of Europe!</h1>
-      <button id="btnStart" class="btnStart">Start Game</button>
+      <h1 class="mainTitle">Map It!</h1>
     </header>
-
+    <div class="mainCanvas">
+      <button id="btnPlay" class="btnPlay">PLAY</button>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/spinning.js"></script>
   </body>
