style title and button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Map It!</title>
-    <meta
+    <meta name="author" content="Szilvia Csernus" />
+    <meta name="description" content="Map It! - Interactive game" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
-    <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&family=Nunito+Sans:wght@400;700&family=Roboto+Mono&family=Righteous&display=swap" rel="stylesheet">
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css"
       rel="stylesheet"
@@ -18,7 +23,7 @@
   <body>
     <div id="map" class="map"></div>
     <header class="header">
-      <h1 class="mainTitle">Map It!</h1>
+      <h1 class="mainTitle">map it</h1>
     </header>
     <div class="mainCanvas">
       <button id="btnPlay" class="btnPlay">PLAY</button>
