improve text style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Convergence&family=Nunito+Sans:wght@400;700&family=Roboto+Mono&family=Righteous&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Convergence:wght@500;700&family=Nunito+Sans:wght@400;700&family=Roboto+Mono:wght@500;700&family=Righteous&display=swap"
       rel="stylesheet"
     />
     
@@ -36,11 +36,8 @@
     
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
-    <script src="./assets/js/scriptMap.js" async defer></script>
-    <script src="./assets/js/scriptSpinning.js" async defer></script>
-    <script src="./assets/js/game.js" async defer></script> -->
+ 
     <script src="./assets/js/index.js"></script>
-    <!-- <script src="./assets/js/game.js"></script> -->
+   
   </body>
 </html>
