--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>map it!</title>
     <meta name="author" content="Szilvia Csernus" />
     <meta name="description" content="Map It! - Interactive game" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=6" />
+    <!-- <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    /> -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Convergence:wght@500;700&family=Nunito+Sans:wght@400;700&family=Roboto+Mono:wght@500;700&family=Righteous&display=swap"
@@ -25,7 +25,7 @@
       <h1 class="mainTitle animate-appear">map it!</h1>
     </header>
     <div id="map" class="map"></div>
-    <div class="mainCanvas animate-appear">
+    <div class="playBtnCanvas animate-appear">
       <button id="btnPlay" class="btnPlay">PLAY</button>
     </div>
 
@@ -34,8 +34,8 @@
       rel="stylesheet"
     />
     
-    <link rel="stylesheet" href="./assets/css/style.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"/> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
  
     <script src="./assets/js/index.js"></script>
    
