--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css"
       rel="stylesheet"
     />
-    
-    <!-- <link rel="stylesheet" href="./assets/css/style.css"/> -->
+ 
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
  
     <script src="./assets/js/index.js"></script>
