--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       defer
     ></script>
 
-    <script src="./assets/js/scriptMap.js" defer></script>
+    <script src="./assets/js/script.js" defer type="module"></script>
   </body>
 </html>
