add feedback layer

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <title>map it!</title>
     <meta name="author" content="Szilvia Csernus" />
-    <meta name="description" content="Map It! - Interactive game" />
+    <meta name="description" content="map it! - Interactive game" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=6"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Convergence:wght@500;700&family=Nunito+Sans:wght@400;700&family=Roboto+Mono:wght@500;700&family=Righteous&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&family=Roboto+Mono:wght@500;700&family=Comic+Sans:wght@700&display=swap"
       rel="stylesheet"
     />
 
@@ -22,10 +22,10 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="mainTitle animate-appear">map it!</h1>
+      <h1 class="mainTitle">map it!</h1>
     </header>
     <div id="map" class="map"></div>
-    <div class="playBtnCanvas animate-appear">
+    <div class="playBtnCanvas">
       <button id="btnPlay" class="btnPlay">PLAY</button>
     </div>
 
