add reset functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&family=Roboto+Mono:wght@500;700&family=Comic+Sans:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&family=Nunito:wght@400;700&family=Roboto+Mono:wght@500;700&family=Comic+Sans:wght@700&display=swap"
       rel="stylesheet"
     />
 
@@ -22,11 +22,15 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="mainTitle">map it!</h1>
+      <div class="utilities"></div>
+      <div class="mainTitle"><h1>map it!</h1></div>
+      <div class="sound"></div>
     </header>
+    
     <div id="map" class="map"></div>
+    
     <div class="playBtnCanvas">
-      <button id="btnPlay" class="btnPlay">PLAY</button>
+      <button class="playBtn">PLAY</button>
     </div>
 
     <script
