--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="utilities"></div>
+      <div class="home"></div>
       <div class="mainTitle"><h1>map it!</h1></div>
-      <div class="sound"></div>
+      <div class="score"></div>
     </header>
     
     <div id="map" class="map"></div>
