--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&family=Nunito:wght@400;700&family=Roboto+Mono:wght@500;700&family=Comic+Sans:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
       rel="stylesheet"
     />
 
