fix max zoom issue

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       defer
     ></script>
 
-    <script src="./assets/js/script.js" defer type="module"></script>
+    <script src="./assets/js/index.js" defer type="module"></script>
   </body>
 </html>
