--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <title>404 error response</title>
 </head>
 <body>
-    <h1 class="question">Opps... seems like an invalid address.</h1>
+    <p class="error">Opps... seems like an invalid address.</p>
     <a class="newGame" href="./index.html">Go to map it!</a>
 </body>
 </html>
