--- a/error.html
+++ b/error.html
@@ -13,7 +13,6 @@
     <title>403 error response</title>
 </head>
 <body>
-    <h1 class="question">We are unable to connect to Mapbox, apologies for the inconvenience!</h1>
-    <h1 class="question">Please try again later.</h1>
+    <p class="error" >We are unable to connect to Mapbox, apologies for the inconvenience!<br/>Please try again later.</p>
 </body>
 </html>
