--- a/error.html
+++ b/error.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./assets/css/first.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>403 error response</title>
+    <title>error response</title>
 </head>
 <body>
     <p class="error" >We are unable to connect to Mapbox, apologies for the inconvenience!<br/>Please try again later.</p>
