--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
 
     <link rel="stylesheet" href="./assets/css/first.css" />
     
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-    </script>
-    <script src="./assets/js/firewall.js"></script>
   </head>
   <body>
     <h1 class="title">map it!</h1>
@@ -46,6 +42,12 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
       defer
     ></script>
+
+    <script type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+   
+    <script src="./assets/js/index.js" type="module"></script>
 
   </body>
 </html>
