change popups to markers

--- a/error.html
+++ b/error.html
@@ -13,6 +13,6 @@
     <title>error response</title>
 </head>
 <body>
-    <p class="error" >We are unable to connect to Mapbox, apologies for the inconvenience!<br/>Please try again later.</p>
+    <p class="error" >An error happened while connecting to Mapbox, apologies for the inconvenience!<br/>Please try again later.</p>
 </body>
 </html>
