add try-again button to error.html

--- a/error.html
+++ b/error.html
@@ -14,5 +14,6 @@
 </head>
 <body>
     <p class="error" >An error happened while connecting to Mapbox, apologies for the inconvenience!<br/>Please try again later.</p>
+    <a class="newGame" href="./index.html">Try again</a>
 </body>
 </html>
