improve intro animation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <h1 class="title">map it!</h1>
 
-    <div class="preMap"></div>
+    <div class="preMapContainer"><div class="preMap"></div></div>
     <div id="map" class="map"></div>
 
     <link rel="stylesheet" href="./assets/css/style.css" defer />
