correct validation errors

--- a/error.html
+++ b/error.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/first.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    >
+    <link rel="stylesheet" href="./assets/css/first.css" >
+    <link rel="stylesheet" href="./assets/css/style.css" >
     <title>error response</title>
 </head>
 <body>
-    <p class="error" >An error happened while connecting to Mapbox, apologies for the inconvenience!<br/>Please try again later.</p>
+    <p class="error" >An error happened while connecting to Mapbox, apologies for the inconvenience!<br>Please try again later.</p>
     <a class="newGame" href="./index.html">Try again</a>
 </body>
 </html>
