--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>map it!</title>
-    <meta name="author" content="Szilvia Csernusne Berczes" />
-    <meta name="description" content="map it! - Interactive game" />
+    <meta name="author" content="Szilvia Csernusne Berczes" >
+    <meta name="description" content="map it! - Interactive game" >
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=6"
-    />
+    >
 
-    <link rel="preconnect" href="https://api.mapbox.com" crossorigin />
-    <link rel="preconnect" href="https://ajax.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
+      rel="stylesheet"
+    >
+    <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg">
+    <link rel="icon" type="image/png" href="./assets/favicons/favicon.png">
+
+    <link rel="stylesheet" href="./assets/css/first.css" >
+  </head>
+  <body>
+    <h1 class="title">map it!</h1>
+
+    <div class="preMapContainer"><div class="preMap"></div></div>
+    <div id="map" class="map"></div>
+
+    <link rel="preconnect" href="https://api.mapbox.com" crossorigin >
+    <link rel="preconnect" href="https://ajax.googleapis.com" crossorigin >
     <script
       src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"
       crossorigin
@@ -20,25 +36,9 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css"
       rel="stylesheet"
       crossorigin
-    />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
-      rel="stylesheet"
-    />
-    <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon.png">
-
-    <link rel="stylesheet" href="./assets/css/first.css" />
-  </head>
-  <body>
-    <h1 class="title">map it!</h1>
-
-    <div class="preMapContainer"><div class="preMap"></div></div>
-    <div id="map" class="map"></div>
-
-    <link rel="stylesheet" href="./assets/css/style.css" defer />
+    >
+    
+    <link rel="stylesheet" href="./assets/css/style.css" >
 
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
@@ -46,7 +46,6 @@
     ></script>
 
     <script
-      type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
     ></script>
 
