--- a/404.html
+++ b/404.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/first.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    >
+    <link rel="stylesheet" href="./assets/css/first.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>404 error response</title>
 </head>
 <body>
