--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <title>404 error response</title>
 </head>
 <body>
-    <p class="error">Opps... seems like an invalid address.</p>
-    <a class="newGame" href="./index.html">Go to map it!</a>
+    <p class="error">Opps... seems like it is an invalid address.</p>
+    <a class="errorBtn" href="./index.html">Go to map it!</a>
 </body>
 </html>
