--- a/no-support.html
+++ b/no-support.html
@@ -13,7 +13,7 @@
     <title>No Mapbox support error response</title>
 </head>
 <body>
-    <h1 class="question">It seems that your browser does not support Mapbox GL Js, apologies for the inconvenience!</h1>
-    <h1 class="question">Please use an up-to-date version of either Chrome, Firefox, Edge or Safari.</h1>
+    <div class="error">It seems that your browser does not support Mapbox GL JS, apologies for the inconvenience!<br>
+      Please use an up-to-date version of either Chrome, Firefox, Edge or Safari.</div>
 </body>
 </html>
