--- a/error.html
+++ b/error.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <p class="error" >An error happened while connecting to Mapbox, apologies for the inconvenience!<br>Please try again later.</p>
-    <a class="newGame" href="./index.html">Try again</a>
+    <a class="errorBtn" href="./index.html">Try again</a>
 </body>
 </html>
