add missing preMapContainer id

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" >
     <title>map it!</title>
     <meta name="author" content="Szilvia Csernusne Berczes" >
     <meta name="description" content="map it! - Interactive game" >
@@ -15,21 +15,20 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
       rel="stylesheet"
     >
-    <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon.png">
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/favicons/favicon.svg"
+    >
+    <link rel="icon" type="image/png" href="./assets/favicons/favicon.png" >
 
     <link rel="stylesheet" href="./assets/css/first.css" >
-  </head>
-  <body>
-    <h1 class="title">map it!</h1>
-
-    <div class="preMapContainer"><div class="preMap"></div></div>
-    <div id="map" class="map"></div>
 
     <link rel="preconnect" href="https://api.mapbox.com" crossorigin >
     <link rel="preconnect" href="https://ajax.googleapis.com" crossorigin >
     <script
       src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"
+      defer
       crossorigin
     ></script>
     <link
@@ -37,9 +36,6 @@
       rel="stylesheet"
       crossorigin
     >
-    
-    <link rel="stylesheet" href="./assets/css/style.css" >
-
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
       defer
@@ -47,7 +43,16 @@
 
     <script
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+      defer
     ></script>
+  </head>
+  <body>
+    <h1 class="title">map it!</h1>
+
+    <div id="preMapContainer" class="preMapContainer"><div class="preMap"></div></div>
+    <div id="map" class="map"></div>
+
+    <link rel="stylesheet" href="./assets/css/style.css" >
 
     <script src="./assets/js/index.js" type="module"></script>
   </body>
