change back google font loading

--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=6"
     >
 
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700"
-      as="font"
-      type="font/ttf"
-      crossorigin
-    >
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    
     <link
       rel="icon"
       type="image/svg+xml"
