--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=6"
     >
-
+    <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" as="style" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" crossorigin>
     
+    <!-- Favicon  -->
     <link
       rel="icon"
       type="image/svg+xml"
       href="./assets/favicons/favicon.svg"
     >
     <link rel="icon" type="image/png" href="./assets/favicons/favicon.png">
-
+    
+    <!-- Essential stylesheet to render first page  -->
     <link rel="stylesheet" href="./assets/css/first.css">
 
+    <!-- Mapbox resources  -->
     <link rel="preconnect" href="https://api.mapbox.com" crossorigin >
     <link rel="preconnect" href="https://ajax.googleapis.com" crossorigin >
     <script
@@ -36,16 +39,20 @@
       rel="stylesheet"
       crossorigin
     >
+
+    <!-- JQuery  -->
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
       defer
     ></script>
 
+    <!-- Email JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
       defer
     ></script>
   </head>
+
   <body>
     <h1 class="title">map it!</h1>
 
